# mcp9808_2nats

./: Cargo.toml  mcp9808_2nats.service  read_temp.py
src/: main.rs
