[package]
name = "mcp9808_2nats"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats = "0.8.6"
cloudevents-sdk = "0.3.0"
url = "2.2"
serde_json = "1.0.60"
chrono = "0.4"
async-std = { version = "1.8.0",  features = ["attributes"] }
uuid = { version = "0.8", features = ["v4"] }
